testcases/errors/isa0.boo
"""
isa0.boo(4,20): BCE0054: 'isa' expects a type reference, a System.Type instance or a type tuple.
"""
print("string" isa "string")
